[package]
name = "difficult-redirect"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = ["Document", "HtmlDocument", "Location", "Window"] }

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "s"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"