[package]
name = "difficult-redirect"
version = "0.1.0"
edition = "2024"
description = "A Redirector for evilginx, designed to use Webassembly and heavy CPU use"
license = "MIT"
repository = "https://github.com/technion/difficult_redirector/"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
js-sys = "0.3.77"
sha2 = "0.10.9"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = ["Document", "HtmlDocument", "Location", "Window"] }

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "s"
